# flutter-discord-rpc

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
cargokit/build_tool/lib/src/: target.dart
example/: pubspec.yaml  pubspec_overrides.yaml
example/integration_test/: simple_test.dart
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/windows/flutter/: generated_plugins.cmake
ios/: flutter_discord_rpc.podspec
lib/: flutter_discord_rpc.dart
lib/src/: flutter_discord_rpc_base.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: api.dart  types.dart
linux/: CMakeLists.txt
macos/: flutter_discord_rpc.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
src/: CMakeLists.txt  flutter_discord_rpc_fork.c
windows/: CMakeLists.txt
